--- a/mvvm/mvvvm_provider/pubspec.yaml
+++ b/mvvm/mvvvm_provider/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   internet_connection_checker: ^1.0.0
   auto_route: ^7.8.4
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
